--- a/WADWolfram/src/main/resources/templates/new_template.html
+++ b/WADWolfram/src/main/resources/templates/new_template.html
@@ -90,13 +90,13 @@
                                 <div class="post-heading">
                                     <h3>{{title}}</h3>
                                 </div>
-                                <img src={{ruta_imagen}} alt="Foto de la noticia" class="img-responsive" />
+                                <img src="{{{ruta_imagen}}}" alt="Foto de la noticia" class="img-responsive" />
                             </div>
                             <p>{{body}}</p>
                             <div class="bottom-article">
                                 <ul class="meta-post">
                                     <li><i class="fa fa-calendar"></i>{{date}}</li>
-                                    <li><i class="fa fa-comments"></i><a href="#">{number_comments}} Comentarios</a></li>
+                                    <li><i class="fa fa-comments"></i><a href="#">{{number_comments}} Comentarios</a></li>
                                 </ul>
                                 <!--		<a href="#" class="readmore pull-right">Continue reading <i class="fa fa-angle-right"></i></a>-->
                             </div>
