--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -41,18 +41,6 @@
 						</h1>
 					</div>
 				</div>
-				<!--<div class="col-md-5">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="input-group form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-	                         <button class="btn btn-primary" type="button">Search</button>
-	                       </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
 				<div class="col-md-2 col-sm-2 col-xs-2" style="margin-left: 180px">
 					<div class="navbar navbar-inverse " role="banner ">
 						<ul class="nav navbar-nav ">
@@ -240,12 +228,13 @@
 								</tr>
 							</thead>
 							<tbody data-brackets-id='193'>
+							{{#projects}}
 								<tr data-brackets-id='194' class="odd gradeX">
-									<td data-brackets-id='195'>Proyecto 1</td>
-									<td data-brackets-id='196'>500</td>
-									<td data-brackets-id='197'>3000</td>
-									<td data-brackets-id='197'>6 meses</td>
-									<td data-brackets-id='197'>2017</td>
+									<td data-brackets-id='195'>{{title}}</td>
+									<td data-brackets-id='196'>{{parcialBudget}}</td>
+									<td data-brackets-id='197'>{{restBudget}}</td>
+									<td data-brackets-id='197'>{{time}}</td>
+									<td data-brackets-id='197'>{{startYear}}</td>
 									<td data-brackets-id='198'><button class="btn btn-primary">
 														<i class="glyphicon glyphicon-pencil"></i> Editar
 													</button>
@@ -254,6 +243,7 @@
 													</button></td>
 
 								</tr>
+								{{/projects}}
 						<!--		<tr data-brackets-id='199' class="even gradeC">
 									<td data-brackets-id='200'>Proyecto 1</td>
 									<td data-brackets-id='201'>Usuario 2</td>
