incomplete image upload

--- a/WADWolfram/src/main/resources/templates/new_template.html
+++ b/WADWolfram/src/main/resources/templates/new_template.html
@@ -90,7 +90,7 @@
                                 <div class="post-heading">
                                     <h3>{{title}}</h3>
                                 </div>
-                                <img src="{{{ruta_imagen}}}" alt="Foto de la noticia" class="img-responsive" />
+                                <img src="/image/{{id}}.jpg" alt="Foto de la noticia" class="img-responsive" />
                             </div>
                             <p>{{body}}</p>
                             <div class="bottom-article">
