--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
@@ -119,7 +119,7 @@
 							<div class="panel-body">
 								<!-- Ponemos method post al form-->
 								<form class="form-horizontal" role="form"
-									action="/admin/AddBlog/create" method="post">
+									action="/admin/AddBlog/create" method="post" enctype="multipart/form-data">
 									<div class="form-group">
 										<label for="inputEmail3" class="col-sm-2 control-label">Título
 											de la noticia</label>
