--- a/WADWolfram/src/main/resources/templates/blog_template.html
+++ b/WADWolfram/src/main/resources/templates/blog_template.html
@@ -108,7 +108,7 @@
                                         <div class="post-heading">
                                             <h3><a href=(/new?id={{id}}>{{title}}</a></h3>
                                         </div>
-                                        <a href=(/new?id={{id}})><img src="{{ruta_imagen}}" alt="Foto de la noticia" class="img-responsive" /></a>
+                                        <a href=(/new?id={{id}})><img src="/image/{{id}}.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
                                          <div><a>{{cuerpo}}</a></div>
                                     </div>
                                     <div class="bottom-article">
