--- a/WADWolfram/src/main/resources/templates/index_template.html
+++ b/WADWolfram/src/main/resources/templates/index_template.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -53,7 +53,7 @@
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="/register">Únete</a></li>
-                                        <li><a href="/login">Inicia sesión</a></li>
+                                        <li><a href="/login">Inicia sesión/Mi Cuenta</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -75,7 +75,7 @@
                         <!-- Slider -->
                         <div id="main-slider" class="main-slider flexslider">
                             <ul class="slides">
-{{#projects}}
+                                {{#projects}}
                                 <li>
                                     <img src={{image}} alt="Foto del proyecto" />
                                     <div class="flex-caption">
@@ -86,7 +86,7 @@
                                     </div>
                                 </li>
 
-{{/projects}}
+                                {{/projects}}
                             </ul>
                         </div>
                         <!-- end slider -->
@@ -107,14 +107,13 @@
                                 </p>
                                 <br/>
 
-                                <h4>Colabora con nuestros proyectos</h4>
-{{#percentages}}
-                            <div class="progress">
+                                <h4>Colabora con nuestros proyectos</h4> {{#percentages}}
+                                <div class="progress">
                                     <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuetext="{{title}}: {{percentage}}%" aria-valuemin="0" aria-valuemax="100" style="width: {{percentage}}%">
-                                         {{title}}: {{percentage}}
+                                        {{title}}: {{percentage}}
                                     </div>
                                 </div>
-{{/percentages}}
+                                {{/percentages}}
                                 <div class="flex-caption">
                                     <a href="/projects" class="btn btn-theme">¡Anímate y participa!</a>
                                 </div>
@@ -123,12 +122,12 @@
                                 <div class="widget" style="margin-left: 120px;">
                                     <h4 class="widgetheading">Noticias de interés</h4>
                                     <ul class="recent">
-{{#news}}
+                                        {{#news}}
                                         <li>
                                             <a href=(/new?id={{id}})> <img src={{image}} class="pull-left" alt="Foto de la noticia" /></a>
                                             <h6><a href=(/new?id={{id}})>{{title}}</a></h6>
                                         </li>
-{{/news}}
+                                        {{/news}}
 
                                     </ul>
                                 </div>
