images upload OK
links to blog_template and new_template

--- a/WADWolfram/src/main/resources/templates/new_template.html
+++ b/WADWolfram/src/main/resources/templates/new_template.html
@@ -92,7 +92,7 @@
                                 </div>
                                 <img src="/image/{{id}}.jpg" alt="Foto de la noticia" class="img-responsive" />
                             </div>
-                            <p>{{body}}</p>
+                            <p>{{cuerpo}}</p>
                             <div class="bottom-article">
                                 <ul class="meta-post">
                                     <li><i class="fa fa-calendar"></i>{{date}}</li>
