--- a/WADWolfram/src/main/resources/templates/blog_template.html
+++ b/WADWolfram/src/main/resources/templates/blog_template.html
@@ -84,7 +84,7 @@
                         <div class="col-lg-12">
                             <ul class="breadcrumb">
                                 <li><a href="/"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-                                <li class="active">Proyectos</li>
+                                <li class="active">Noticias</li>
                             </ul>
                         </div>
                     </div>
@@ -106,9 +106,9 @@
                                 <li>
                                     <div class="post-image">
                                         <div class="post-heading">
-                                            <h3><a href=(/new?id={{id}}>{{title}}</a></h3>
+                                            <h3><a href=/new?id={{id}}>{{title}}</a></h3>
                                         </div>
-                                        <a href=(/new?id={{id}})><img src="/image/{{id}}.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
+                                        <a href=/new?id={{id}}><img src="/image/{{id}}.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
                                          <div><a>{{cuerpo}}</a></div>
                                     </div>
                                     <div class="bottom-article">
