--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -100,7 +100,7 @@
                                         <li id="iteMyDatas"><a href="#" onclick="javascript:changeShow(this)" id="myDatas">Mis datos</a></li>
                                     </ul>
 
-                                    <a href="/login" class="btn btn-info col-lg-2 " role="button" id="btn_sesion">Cerrar Sesión</a>
+                                    <a href="/user/close" class="btn btn-info col-lg-2 " role="button" id="btn_sesion">Cerrar Sesión</a>
 
                                 </div>
                             </nav>
