comments in progress. more changes
new_template done, comments in progress, project and image's upload done

--- a/WADWolfram/src/main/resources/templates/blog_template.html
+++ b/WADWolfram/src/main/resources/templates/blog_template.html
@@ -114,9 +114,9 @@
                                     <div class="bottom-article">
                                         <ul class="meta-post">
                                             <li><i class="fa fa-calendar"></i><a>{{date}}</a></li>
-                                            <li><i class="fa fa-comments"></i><a href="#">{{number_comments}} Comentarios</a></li>
+                                            <li><i class="fa fa-comments"></i><a>{{number_comments}} Comentarios</a></li>
                                         </ul>
-                                        <!--		<a href="#" class="readmore pull-right">Continue reading <i class="fa fa-angle-right"></i></a>-->
+                                       <a href=/new?id={{id}} class="readmore pull-right">Continuar leyendo <i class="fa fa-angle-right"></i></a>
                                     </div>
                                 </li>
 
