--- a/WADWolfram/src/main/resources/templates/oneProject.html
+++ b/WADWolfram/src/main/resources/templates/oneProject.html
@@ -45,28 +45,6 @@
     <div id="wrapper">
         <!-- start header -->
         <header>
-            <!--		<div class="top">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6">
-							<ul class="topleft-info">
-								<li><i class="fa fa-phone"></i> +62 088 999 123</li>
-							</ul>
-						</div>
-						<div class="col-md-6">
-						<div id="sb-search" class="sb-search">
-							<form>
-								<input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
-								<input class="sb-search-submit" type="submit" value="">
-								<span class="sb-icon-search" title="Click to start searching"></span>
-							</form>
-						</div>
-
-
-						</div>
-					</div>
-				</div>
-			</div>	-->
 
             <div class="navbar navbar-default navbar-static-top">
                 <div class="container">
@@ -124,7 +102,7 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
-                                                <img src={{image}} id="proyectImage" class="img-responsive" />
+                                                <img src="/image/{{id}}.jpg" id="proyectImage" class="img-responsive" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -218,12 +196,7 @@
                     <div class="col-sm-3 col-lg-3">
                         <div class="widget">
                             <h4>Idioma</h4>
-                            <!--   <div class="form-group multiple-form-group input-group">
-                        <input type="email" name="email" class="form-control">
-                        <span class="input-group-btn">
-                            <button type="button" class="btn btn-theme btn-add">Subscribe</button>
-                        </span>
-                    </div>-->
+                         
                         </div>
                     </div>
                 </div>
