--- a/WADWolfram/src/main/resources/templates/projects_template.html
+++ b/WADWolfram/src/main/resources/templates/projects_template.html
@@ -128,7 +128,7 @@
 
                                         <div class="cbp-caption">
                                             <div class="cbp-caption-defaultWrap">
-                                                <img src="{{image}}" alt="foto del proyecto" />
+                                                <img src="/image/{{id}}.jpg" alt="foto del proyecto" />
                                             </div>
                                             <div class="cbp-caption-activeWrap">
                                                 <div class="cbp-l-caption-alignCenter">
