TOMAAAAAAAAAA toda la tarde para hacer el put gitano
all changes bla bla

--- a/WADWolfram/src/main/resources/templates/new_template.html
+++ b/WADWolfram/src/main/resources/templates/new_template.html
@@ -120,7 +120,7 @@
                         <div class="clear"></div>
                         <div class="marginbot30"></div>
                         <h4>Deja tu comentario</h4>
-                        <form role="form" action="/comment/upload/{{id}}" method="put">
+                        <form role="form" action="/comment/upload/{{id}}" method="post">
                             <div class="form-group">
                                 <textarea class="form-control" rows="8" placeholder="Comenta aquí" name="comentarios"></textarea>
                             </div>
