--- a/WADWolfram/src/main/resources/templates/index_template.html
+++ b/WADWolfram/src/main/resources/templates/index_template.html
@@ -77,12 +77,12 @@
                             <ul class="slides">
 {{#projects}}
                                 <li>
-                                    <img src={{image}} alt="Foto del proyecto" />
+                                    <img src="{{image}}" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>{{title}}</h3>
                                         <p>{{shorDescription}}</p>
                                         <!--cambiar lo de arriba-->
-                                        <a href=(/Project?id={{id}}) class="btn btn-theme">Leer más</a>
+                                        <a href="/Project?id={{id}}" class="btn btn-theme">Leer más</a>
                                     </div>
                                 </li>
 
@@ -125,8 +125,8 @@
                                     <ul class="recent">
 {{#news}}
                                         <li>
-                                            <a href=(/new?id={{id}})> <img src={{image}} class="pull-left" alt="Foto de la noticia" /></a>
-                                            <h6><a href=(/new?id={{id}})>{{title}}</a></h6>
+                                            <a href="/new?id={{id}}"> <img src="{{image}}" class="pull-left" alt="Foto de la noticia" /></a>
+                                            <h6><a href="/new?id={{id}}">{{title}}</a></h6>
                                         </li>
 {{/news}}
 
